--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,13 +3,33 @@
 
   {% include head.html %}
 
-  <body>
+  <body class="theme-base-0d">
 
-    {% include sidebar.html %}
+    <div  id="content" style="z-index:3;min-height: 100vh;min-width: 100vh;">
+      {% include sidebar.html %}
 
-    <div class="content container">
+    <div class="content container" style="z-index:2 ;">
       {{ content }}
-    </div>
-
+    </div></div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r121/three.min.js "></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.fog.min.js"></script> -->
+    <script src="{{ site.baseurl }}public/vantafog.js"></script>
+    <script>
+    VANTA.FOG({
+    el: "#content",
+    mouseControls: true,
+    touchControls: true,
+    gyroControls: true,
+    minHeight: 200.00,
+    minWidth: 200.00,
+    highlightColor: 0x8cb5c6,
+    midtoneColor: 0x939fca,
+    lowlightColor: 0x9ccec4,
+    baseColor: 0xfff1eb,
+    blurFactor: 0.50,
+    speed: 0.9,
+    zoom: 0.50
+  })
+    </script>
   </body>
 </html>
