--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
     </div></div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r121/three.min.js "></script>
     <!-- <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.fog.min.js"></script> -->
-    <script src="{{ site.baseurl }}public/vantafog.js"></script>
+    <script src="{{ site.url }}/{{ site.baseurl }}public/vantafog.js"></script>
     <script>
     VANTA.FOG({
     el: "#content",
