--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,7 +1,7 @@
 <div class="sidebar" style="z-index:2 ;">
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
-      <img src="{{ site.url }}/{{ site.baseurl }}public/Myphoto.jpg" alt="My photo">
+      <img src="{{ site.url }}/{{ site.baseurl }}public/Myphoto-big.jpg" alt="My photo">
       <h1>{{ site.fname }} {{ site.lname }}</h1>
       <!-- <p class="lead">{{ site.description }}</p> -->
     </div>
